--- a/charts/fluentd/Chart.yaml
+++ b/charts/fluentd/Chart.yaml
@@ -1,17 +1,18 @@
 name: fluentd
 version: 0.1.0
-description: Fluentd chart for routing logs
-keywords:
+appVersion: 1.2.4
+description: A Fluentd Helm chart for Kubernetes.
+keywords: 
   - logging
-  - journald
-  - docker
-  - kernel
-  - fluent
-home: https://github.com/samsung-cnct/chart-fluentd
+  - elasticsearch 
+  - s3 
+  - docker 
+  - fluentd 
+  - kubernetes 
+home: https://www.fluentd.org/
+icon: https://raw.githubusercontent.com/fluent/fluentd-docs/master/public/logo/Fluentd_square.png
 sources:
-  - https://github.com/samsung-cnct/chart-fluentd
+  - https://www.fluentd.org/
 maintainers:
-  - name: Samsung CNCT OSS Maintainers
-    email: oss-maintainer@samsung-cnct.io
-icon: https://github.com/fluent/fluentd
-engine: gotpl
+  - name: dstorck
+    email: deirdre.storck@gmail.com
