--- a/charts/fluentd/values.yaml
+++ b/charts/fluentd/values.yaml
@@ -26,6 +26,8 @@ awsKeyId: keyId
 s3Bucket: sampleBucketName
 s3Region: sampleBucketRegion
 
+enableTLS: false 
+
 plugins: 
   - fluent-plugin-s3
 
